--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "eslint": "^8.56.0",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.44.23",
-    "flowbite-svelte-icons": "^1.4.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "3.2.5",
@@ -30,5 +29,8 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.2",
     "vite": "^5.1.0"
+  },
+  "dependencies": {
+    "@thaunknown/thirty-two": "^1.0.3"
   }
 }
