--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "flowbite": "^2.3.0",
-    "flowbite-svelte": "^0.44.23",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "prettier": "3.2.5",
@@ -31,6 +29,6 @@
     "vite": "^5.1.0"
   },
   "dependencies": {
-    "@thaunknown/thirty-two": "^1.0.3"
+    "bits-ui": "^0.21.1"
   }
 }
