--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
     "postcss-load-config": "^5.0.2",
     "prettier": "3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^4.2.10",
     "svelte-check": "^3.6.3",
-    "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.2",
     "vite": "^5.1.0"
   },
   "dependencies": {
-    "bits-ui": "^0.21.1"
+    "bits-ui": "^0.21.1",
+    "sanitize.css": "^13.0.0"
   }
 }
