--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.56.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
+    "postcss-nesting": "^12.1.1",
     "prettier": "3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
     "svelte": "^4.2.10",
