--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "vitest"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "postcss-nesting": "^12.1.1",
@@ -25,7 +26,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.2",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "bits-ui": "^0.21.1",
