--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-plugin-svelte": "^3.2.1",
     "svelte": "^4.2.10",
     "svelte-check": "^3.6.3",
+    "svelte-dnd-action": "^0.9.43",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.2",
