--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.3.3",
     "typescript-eslint": "^7.0.2",
     "vite": "^5.1.0",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^1.4.0"
   },
   "dependencies": {
