--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write .",
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "stylelint": "stylelint \"src/**/*.{css,svelte}\""
   },
   "browserslist": [
     "iOS >= 12.5",
@@ -23,10 +24,13 @@
     "browserslist-to-esbuild": "^2.1.1",
     "eslint": "^8.57.0",
     "postcss": "^8.4.32",
+    "postcss-html": "^1.7.0",
     "postcss-load-config": "^5.0.2",
     "postcss-nesting": "^12.1.1",
     "prettier": "3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recommended": "^14.0.0",
     "svelte": "^4.2.10",
     "svelte-check": "^3.6.3",
     "svelte-dnd-action": "^0.9.43",
