--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "bits-ui": "^0.21.1",
     "nanoid": "^5.0.7",
-    "sanitize.css": "^13.0.0"
+    "sanitize.css": "^13.0.0",
+    "zod": "^3.23.8"
   }
 }
