--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/svelte": "^5.2.0",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "^20.16.1",
     "autoprefixer": "^10.4.16",
     "browserslist": "^4.23.0",
     "browserslist-to-esbuild": "^2.1.1",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "bits-ui": "^0.21.1",
+    "html5-qrcode": "^2.3.8",
     "nanoid": "^5.0.7",
     "sanitize.css": "^13.0.0",
     "zod": "^3.23.8"
