--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "Firefox ESR"
   ],
   "devDependencies": {
+    "@playwright/test": "^1.46.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/svelte": "^5.2.0",
@@ -33,11 +34,11 @@
     "postcss-load-config": "^5.0.2",
     "postcss-nesting": "^12.1.1",
     "prettier": "3.2.5",
-    "prettier-plugin-svelte": "^3.2.1",
+    "prettier-plugin-svelte": "^3.2.6",
     "stylelint": "^16.6.1",
     "stylelint-config-recommended": "^14.0.0",
-    "svelte": "^4.2.10",
-    "svelte-check": "^3.6.3",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.8.6",
     "svelte-dnd-action": "^0.9.43",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
